[project]
name = "fastapi-example"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "kkosuge", email = "root@kksg.net" }
]
dependencies = ["fastapi~=0.95.2", "uvicorn~=0.22.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.rye.scripts]
dev = "uvicorn src.main:app --reload --port 8000"
